# radiation-decay-secondaries

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-test.yaml
materials/: materials.xml
src/: DetectorConstruction.cpp  DetectorConstruction.h  EventAction.h  PhysicsList.cpp  PhysicsList.h  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  RunAction.cpp  RunAction.h  SensitiveDetector.cpp  SteppingAction.cpp  TrackingAction.cpp  TrackingAction.h
